--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -1126,8 +1126,76 @@ MapReduce 是 Google 大数据处理的三驾马车之一，另外两个是 GFS 
 
 大部分动态规划能解决的问题，都可以通过回溯算法来解决，只不过回溯算法解决起来效率比较低，时间复杂度是指数级的。动态规划算法，在执行效率方面，要高很多。尽管执行效率提高了，但是动态规划的空间复杂度也提高了，所以，很多时候，我们会说，动态规划是一种空间换时间的算法思想。
 
-# 24.拓扑排序
+# 24.Redis常用数据类型的底层数据结构
 
-# 25.最短路径
+Redis是一种K-V数据库，相比于关系型数据库如MySQL，Redis属于非关系型数据库。Redis主要作为内存数据库使用，但是也支持持久化数据到硬盘。Redis中键的数据类型是字符串，值的类型多样，主要有字符串、列表、字典、集合、有序集合。
 
-# 26.B+树
+### 列表 list ###
+
+列表支持存储一组数据，这种数据类型有2种实现方式，**压缩列表**和**双向循环链表**。当列表中存储的数据量比较小的时候，采用压缩列表的方式来实现，需要满足2个条件：
+* 列表中保存的单个数据小于64字节
+* 列表中数据个数少于512个
+
+压缩列表，不是基础的数据结构，而是Redis自己设计的。有点类似于数组，通过一片连续的内存空间存储数据；但是跟数组不同的是，它**允许存储的数据大小不同**。具体的存储结构是“data_num+data1_len+data1+data2_len+data2+...”，这样与数组相比，可以通过控制单个数据的长度来节省内存，也就是压缩名称的意义。
+
+当列表中存储的数据量比较大的时候，就是突破了上面2个条件，那么列表就需要通过双向循环链表来实现了。Redis实现双向循环链表，额外定义了一个list结构体，来组织链表的首、尾指针和长度信息。即先定了了struct list，再定义struct listNode。
+```
+// 以下是 C 语言代码，因为 Redis 是用 C 语言实现的。
+typedef struct listnode {
+  struct listNode *prev;
+  struct listNode *next;
+  void *value;
+} listNode;
+ 
+ 
+typedef struct list {
+  listNode *head;
+  listNode *tail;
+  unsigned long len;
+  // .... 省略其他定义
+} list;
+```
+
+### 字典 hash ###
+
+字典类型用来存储一组数据对，可以理解为存储的是对象信息，比如存储student，那么学生有{'age':20}和{'height',170}等属性。
+
+字典也有2种实现方式，一种是上面说的**压缩列表**，另一种是**哈希表**。同样在数据量比较小的情况下，Redis会用压缩列表来实现字典类型，否则采用哈希表来实现。采用压缩列表的条件如下：
+* 字典中保存的键和值的大小都要小于64字节
+* 字典中键值对个数要小于512个
+
+Redis使用MurmurHash2这种运行速度快、随机性好的哈希算法作为哈希函数。对于哈希冲突问题，Redis使用链表法解决。此外Redis还支持动态扩容、缩容。
+
+当数据动态增加后，如果哈希表的装填因子大于1时，Redis会触发扩容，将哈希表扩大为原来的2倍左右。当数据动态减少后，为节省内存，当装填因子小于0.1时，Redis触发缩容，缩小为字典中数据个数的2倍左右。
+
+扩容缩容要做大量的数据搬移和哈希值重新计算，比较耗时，因此Redis使用渐进式扩容缩容策略，分批进行数据搬移，避免一次性处理大量数据导致服务停顿。
+
+### 集合 set ###
+
+集合的实现方式也有2种，分别是**有序数组**和**哈希表**。当要存储的数据满足如下2个条件时，Redis采用有序数组实现集合数据类型：
+* 存储的数据都是整数
+* 存储数据元素个数不超过512个
+
+事实上，Python中的集合set也是基于哈希表实现的，当你向set中add不可哈希对象如list时，会报错.
+
+### 有序集合 zset ###
+
+有序集合存储一组数据，且每个数据附带一个分数，通过分数大小来把数据组织成跳跃表的数据结构，以支持快速按照分值或者分值区间来查找数据。
+
+实际上有序集合也不仅仅只有**跳跃表**这一种实现方式，当数据量比较小的时候，Redis也会采用**压缩列表**来实现有序集合，条件如下：
+* 所有数据的大小都小于64字节
+* 元素个数小于128个
+
+### 数据结构持久化 ###
+
+Redis 的数据格式由“键”和“值”两部分组成。而“值”又支持很多数据类型，比如字符串、列表、字典、集合、有序集合。像字典、集合等类型，底层用到了散列表，散列表中有指针的概念，而指针指向的是内存中的存储地址。那**Redis 是如何将这样一个跟具体内存地址有关的数据结构存储到磁盘中的呢？**
+
+这种问题就是**数据结构的持久化**问题，或者**对象的持久化**问题，持久化可以理解为存储到磁盘。主要有2种思路：
+* 清除原有的存储结构，只将数据存储到磁盘中。当我们需要从磁盘还原数据到内存的时候，再重新将数据组织成原来的数据结构。实际上，Redis 采用的就是这种持久化思路。但是这样会有一定的弊端。那就是数据从硬盘还原到内存的过程，会耗用比较多的时间。比如，我们现在要将散列表中的数据存储到磁盘。当我们从磁盘中，取出数据重新构建散列表的时候，需要重新计算每个数据的哈希值。如果磁盘中存储的是几 GB 的数据，那重构数据结构的耗时就不可忽视了
+* 保留原来的存储格式，将数据按照原有的格式存储在磁盘中。比如将散列表的大小、每个数据被散列到的槽的编号等信息，都保存在磁盘中。有了这些信息，我们从磁盘中将数据还原到内存中的时候，就可以避免重新计算哈希值
+
+总结，Redis采用数据类型底层依赖的数据结构，大概就是5种：**压缩列表、有序数组、链表、哈希表、跳跃表**。甚至可以说Redis就是这些数据结构的良好封装。**redis的数据结构由多种数据结构来实现，主要是出于时间和空间的考虑，当数据量小的时候通过数组下标访问最快、占用内存最小，而压缩列表只是数组的升级版；因为数组需要占用连续的内存空间，所以当数据量大的时候，就需要使用链表了，同时为了保证速度又需要和数组结合，也就有了哈希表**。另外一点，压缩列表虽然是数组的升级版，但是却**不支持随机访问**，因为数据的长度不等，无法通过基地址和下标去算下标地址。不过Redis也不会做随机访问，因为一般都是通过key获取整个value的值。
+
+
+
+
