--- a/数据结构与算法学习笔记.md
+++ b/数据结构与算法学习笔记.md
@@ -840,6 +840,8 @@ MD5(消息摘要算法)，SHA(安全哈希算法)，DES(数据加密标准)，AE
 * 节点深度。根节点到该节点的边数
 * 节点层数。节点深度+1
 
+*关于深度，有不同的说法，有的说根节点的深度为0，有的说是1；高度也是，有的说叶子节点高度为0，有的说是1*
+
 深度指的是到根节点的边数，自上而下；高度指的是到叶节点的边数，自下而上。
 
 ### 1.二叉树 ###
